2003-12-05  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/hal_diag.h: hal_delay_us() is a C function.

2003-08-08  Gary Thomas  <gary@mind.be>

	* src/pxa2x0_misc.c: 
	* include/hal_pxa2x0.h: Support GPIO alternate functions.

2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_arm_xscale_pxa2x0.cdl:
        Changed values for CYGNUM_HAL_RTC_NUMERATOR,
        CYGNUM_HAL_RTC_DENOMINATOR and CYGNUM_HAL_RTC_PERIOD to
        "default_value" from "calculated". This makes it easier
        to change these values globally.
        
2003-02-24  Gary Thomas  <gary@mlbassoc.com>

	* src/pxa2x0_misc.c (hal_IRQ_handler): Pass 'sources' on to any
	extended IRQ handler (it may need them).

2003-02-20  Gary Thomas  <gary@mlbassoc.com>

	* src/pxa2x0_misc.c (hal_hardware_init): Move call to hal_if_init()
	into platform code (so it can do I/O).  Also, support common CDL
	for CACHE startup enables.

2003-01-24  Knud Woehler <knud.woehler@microplex.de>
2003-01-24  Mark Salter <msalter@redhat.com>

	* Initial import from Knud Woehler.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2003 Red Hat, Inc.
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//