@@ -160,14 +160,19 @@
 #define CYGNUM_HAL_INTERRUPT_GPIO78	(96+14)
 #define CYGNUM_HAL_INTERRUPT_GPIO79	(96+15)
 #define CYGNUM_HAL_INTERRUPT_GPIO80	(96+16)
+#define CYGNUM_HAL_INTERRUPT_GPIO81	(96+17)
+#define CYGNUM_HAL_INTERRUPT_GPIO82	(96+18)
+#define CYGNUM_HAL_INTERRUPT_GPIO83	(96+19)
+#define CYGNUM_HAL_INTERRUPT_GPIO84	(96+20)
+#define CYGNUM_HAL_INTERRUPT_GPIO85	(96+21)
 
 
 #define CYGNUM_HAL_INTERRUPT_NONE	-1
 
 #define CYGNUM_HAL_INTERRUPT_RTC	CYGNUM_HAL_INTERRUPT_TIMER0
 
-#define CYGNUM_HAL_ISR_MIN			8
-#define CYGNUM_HAL_ISR_MAX			(96+16)
+#define CYGNUM_HAL_ISR_MIN		0
+#define CYGNUM_HAL_ISR_MAX		(96+21)
 #define CYGNUM_HAL_ISR_COUNT		(CYGNUM_HAL_ISR_MAX-CYGNUM_HAL_ISR_MIN+1)
 
 #ifdef CYGVAR_KERNEL_COUNTERS_CLOCK_LATENCY
