@@ -1,3 +1,9 @@
+2003-12-05  Daniel Schmidt <sc_da@gmx.de>
+
+	* include/hal_var_ints.h: Added CYGNUM_HAL_INTERRUPT_GPIO81..85
+	for PXA255. Changed CYGNUM_HAL_ISR_MIN to 0 because of missing
+	vector translation in arm/arch/current/include/hal_intr.h
+
 2003-12-05  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* include/hal_diag.h: hal_delay_us() is a C function.
